# server

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENCE  Makefile  README.md  docker-compose.yml  entrypoint  gunicorn.conf.py  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: test.yml
assets/: govuk.scss  main.js  main.scss
assets/components/: finds-table.scss  homepage.scss  how-to-play.scss  leaderboard-search.scss  leaderboard-table.scss  pagination.scss  phase-banner.scss  thanks-for-playing.scss
assets/css/: govuk.scss  main.scss
assets/css/components/: header.scss  hexgrid.scss  page-header-actions.scss
assets/js/: main.js
assets/map/: README.md  hexpansion_style.json  location_editor.ts  map.scss  map.ts  map_style.ts
assets/map/style/: README.md  basemap.ts  map_style.ts  types.ts
docs/: caching.md  referential_integrity.md
gchqnet/: notes.md
gchqnet/accounts/: admin.py  apps.py  auth.py  factories.py  forms.py  mixins.py  models.py  repository.py  tokens.py  totp.py  urls.py  views.py
gchqnet/accounts/api/: serializers.py  views.py
gchqnet/accounts/migrations/: 0001_initial.py  0002_add_user_api_tokens.py  0002_case_insensitive_unique_display_name.py  0003_add_secret_to_badge.py  0003_badge.py  0004_alter_user_username.py  0005_alter_badge_mac_address.py
gchqnet/accounts/models/: __init__.py  badge.py  user.py
gchqnet/accounts/tests/: conftest.py  test_user_queryset.py
gchqnet/accounts/usernames/: __init__.py  data.py
gchqnet/achievements/: admin.py  apps.py  constants.py  forms.py  models.py  repository.py  urls.py  views.py
gchqnet/achievements/api/: serializers.py  views.py
gchqnet/achievements/migrations/: 0001_add_basic_achievements.py  0001_initial.py  0002_add_first_to_capture_achievement.py  0002_alter_basicachievementevent_user.py  0003_add_basic_award_type.py  0003_basicachievementevent_score.py  0004_add_location_groups.py  0005_location_group_events.py  0006_add_claim_codes.py  0007_add_description_to_basic.py
gchqnet/achievements/tests/: conftest.py  test_repository.py  test_views.py
gchqnet/content/: apps.py  urls.py  views.py
gchqnet/core/: api.py  asgi.py  context_processors.py  middleware.py  mixins.py  settings.py  urls.py  wsgi.py
gchqnet/core/settings/: base.py  dev.py  production.py  test.py
gchqnet/hexpansion/: admin.py  apps.py  crypto.py  factories.py  models.py
gchqnet/hexpansion/api/: serializers.py  views.py
gchqnet/hexpansion/migrations/: 0001_initial.py
gchqnet/logistics/: apps.py  forms.py  mixins.py  models.py  urls.py  views.py
gchqnet/quest/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
gchqnet/static/: villages.geojson
gchqnet/templates/: 400.html  403.html  404.html  500.html
(+150 files in other folders)
